2010-07-09  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageHeader.cs, MessageHeaderInfo.cs: add internal Prefix
	  property and copy them from source to destination.

2010-07-09  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageImpl.cs : When XmlReaderMessage was writing its contents,
	  it was dropping body attributes, including wsu:Id for WS-Security.

2010-07-09  Atsushi Enomoto  <atsushi@ximian.com>

	* SecureMessageGenerator.cs : MessageBuffer was missing copy of
	  Body wsu:Id attribute.
	* HttpRequestChannel.cs : remove comment for resolved issue.

2010-07-09  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpListenerManager.cs : move another old code.

2010-07-08  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpRequestChannel.cs : remove extra code.

2010-07-08  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlReaderBodyWriter.cs, MessageFault.cs: warning cleanups.

2010-07-06  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelFactoryBase.cs : null via uri parameter is not allowed.

2010-07-05  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpTransportbindingElement.cs : remove "Standalone".

2010-07-05  Atsushi Enomoto  <atsushi@ximian.com>

	* SvcHttpHandler.cs : removed old code and #if blocks.

2010-07-05  Atsushi Enomoto  <atsushi@ximian.com>

	* SvcHttpHandler.cs : add required code for new ASP.NET HTTP stack.
	  Support for new and old stack (both) are temporarily enabled.
	* HttpTransportBindingElement.cs : switch to new ASP.NET stack.

2010-07-02  Atsushi Enomoto  <atsushi@ximian.com>

	* SvcHttpHandlerFactory.cs : remove unused code.
	* SvcHttpHandler.cs : ditto. Add some code for what new asp.net
	  support will look like.

2010-07-02  Atsushi Enomoto  <atsushi@ximian.com>

	* Message.cs, MessageImpl.cs, MessageBufferImpl.cs : remove BodyId.
	  XML attributes on s:Body are handled appropriately, not limited to
	  wsu:Id. Added several required overrides to Message and
	  MessageBuffer implementation classes.